--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,116 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+
+:root {
+    --text: #1A0B00;
+    --background: #FFFDFC;
+    --item-background: #FFFFFF;
+    --primary: #FD5612;
+    --primary-contrast: #FFFDFC;
+    --primary-light: #FFA972;
+    --primary-bg: #FFF5ED;
+    --primary-bg-light: #FFF8F3;
+    --border: #DCDCDC;
+}
+
+html, body {
+    height: 100%;
+    width: 100%;
+    background-color: var(--background);
+}
+
+html, body, * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
+    color: var(--text);
+}
+
+a {
+    color: var(--primary);
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 1.625rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+h3 {
+    font-size: 1.375rem;
+}
+
+h4 {
+    font-size: 1.25rem;
+}
+
+h5 {
+    font-size: 1.125rem;
+}
+
+h6, p {
+    font-size: 1rem;
+}
+
+button {
+    outline: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+input {
+    box-shadow: 0 0 0 30px var(--background) inset !important;
+    -webkit-box-shadow: 0 0 0 30px var(--background) inset !important;
+    outline: none;
+    font-size: 1rem;
+}
+
+.form-input input {
+    border: 1px solid var(--border);
+    width: 100%;
+    border-radius: .5rem;
+    background-color: var(--background);
+    padding: .8rem 12px;
+
+    &:focus {
+        border: 1px solid var(--primary-light);
+    }
+}
+
+.btn-primary {
+    background-color: var(--primary);
+    color: var(--primary-contrast);
+    width: 100%;
+    padding: .9rem 12px;
+    font-weight: 600;
+    border-radius: .5rem;
+}
+
+@media screen and (min-width: 768px) {
+    html, body {
+        font-size: 106.25%;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    html, body {
+        font-size: 112.5%;
+    }
+}
+
+@media screen and (min-width: 1224px) {
+    html, body {
+        font-size: 118.75%;
+    }
+}
+
+@media screen and (min-width: 1824px) {
+    html, body {
+        font-size: 125.5%;
+    }
+}
