--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,36 +1,38 @@
-<div class="row">
-    <div class="col-xs-12">
-        <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="img-responsive" style="max-height: 300px" >
-    </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <h1>{{ recipe.name }}</h1>
-    </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <div appDropdown class="btn-group" >
-            <button type="button" class="btn btn-primary dropdown-toggle" >Manage Recipe <span class="caret" ></span> </button>
-            <ul class="dropdown-menu">
-                <li> <a (click)="onAddToShoppingList()" style="cursor: pointer;" >To shopping list</a></li>
-                <li> <a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe </a></li>
-                <li> <a style="cursor: pointer;" (click)="onDeleteRecipe()" >Delete Recipe</a></li>
-            </ul>
+<div class="container">
+    <div class="item-img-container">
+        <div class="btns">
+            <button class="btn" (click)="back()">
+                <img src="assets/icons/arrow-left.svg">
+            </button>
+            <button class="btn shopping-cart">
+                <img src="assets/icons/shopping-cart.svg">
+            </button>
         </div>
+        <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="item-img">
     </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <p>{{recipe.description}}</p>
-    </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <ul class="list-group">
-            <li class="list-group-item" *ngFor="let ingredient of recipe.ingredients" >
-                {{ ingredient.name }} - {{ ingredient.amount }}
-            </li>
-        </ul>
+    <section class="item-details">
+        <section class="item-section">
+            <h2>{{ recipe.name }}</h2>
+            <p class="desc">{{recipe.description}}</p>
+        </section>
+        <section class="item-section ingredients">
+            <h4 class="header">Ingredients</h4>
+            <ul class="ingredients-list">
+                <li class="ingredient" *ngFor="let ingredient of recipe.ingredients">
+                    <p class="name">{{ ingredient.name }}</p>
+                    <p class="amount">{{ ingredient.amount }}</p>
+                </li>
+            </ul>
+        </section>
+    </section>
+    <div class="actions">
+        <button class="action edit" (click)="onEditRecipe()">
+            <img src="assets/icons/edit.svg" />
+            <h6>Edit</h6>
+        </button>
+        <button class="action delete" (click)="onDeleteRecipe()">
+            <img src="assets/icons/trash-outline.svg" />
+            <h6>Delete</h6>
+        </button>
     </div>
 </div>
