--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 
 :root {
     --text: #1A0B00;
+    --text-rgb: 26,11,0;
     --background: #FFFDFC;
     --item-background: #FFFFFF;
     --primary: #FD5612;
@@ -12,7 +13,10 @@
     --primary-dark-rgb: 70,29,4;
     --primary-bg: #FFF5ED;
     --primary-bg-light: #FFF8F3;
+    --danger: #FA2314;
     --border: #DCDCDC;
+    --border-light: #F0F0F0;
+    --shadow: 0px 1px 3px 0px rgba(var(--primary-dark-rgb),0.15);
 }
 
 html, body {
@@ -68,6 +72,7 @@ button {
     border: none;
     cursor: pointer;
     font-size: 1rem;
+    -webkit-tap-highlight-color: transparent;
 }
 
 input {
