edit recipe page

--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -19,14 +19,14 @@
         max-width: 22.5rem;
 
         .form-input {
-            margin-bottom: 20px;
+            margin-bottom: 1.25rem;
         }
 
         .actions {
             margin-top: 12px;
 
             .sign-up {
-                margin-block: 20px;
+                margin-block: 1.25rem;
                 text-align: center;
 
                 a {
