--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,4 +1,4 @@
-<app-header title="Recipe Book" [centeredTitle]="true">
+<app-header title="Recipe Book">
     <div class="end">
         <button class="btn-icon">
             <img src="assets/icons/shopping-cart.svg" />
