--- a/src/app/recipes/recipe-detail/recipe-detail.component.scss
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.scss
@@ -105,7 +105,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: var(--background);
+        background-color: var(--item-background);
         padding-block: .5rem;
         position: fixed;
         z-index: 2;
