--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -8,4 +8,12 @@
     -webkit-box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.25);
     -moz-box-shadow: 0px 4px 4px -2px rgba(0,0,0,0.25);
     position: relative;
+
+    h4.centered {
+        position: absolute;
+        left: 0;
+        z-index: 1;
+        text-align: center;
+        width: 100%;
+    }
 }
