--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -4,7 +4,7 @@
             <button class="btn" (click)="back()">
                 <img src="assets/icons/arrow-left.svg">
             </button>
-            <button class="btn shopping-cart">
+            <button class="btn shopping-cart" (click)="onAddToShoppingList()">
                 <img src="assets/icons/shopping-cart.svg">
             </button>
         </div>
