--- a/src/app/recipes/recipe-detail/recipe-detail.component.scss
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.scss
@@ -64,6 +64,7 @@
 
                 .ingredients-list {
                     list-style-type: none;
+                    background-color: var(--item-background);
                     margin-top: .625rem;
                     padding: 0 1rem;
                     border-radius: .5rem;
