--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,6 +1,6 @@
 <app-header title="Recipe Book">
     <div class="end">
-        <button class="btn-icon">
+        <button class="btn-icon" (click)="onShoppingList()">
             <img src="assets/icons/shopping-cart.svg" />
         </button>
         <button class="btn-icon" (click)="onLogout()">
