--- a/src/app/recipes/recipe-edit/recipe-edit.component.scss
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.scss
@@ -10,16 +10,16 @@
   
   form {
     width: min(90%, 30rem);
-    padding-block: 2rem;
+    padding-block: 1.5rem;
 
     .form-input {
-      margin-bottom: 1.25rem;
+      margin-bottom: 1rem;
     }
 
     .recipe-img img {
       width: 100%;
       aspect-ratio: 5 / 4;
-      margin-bottom: 1.25rem;
+      margin-bottom: 1rem;
       border-radius: .5rem;
       object-fit: cover;
     }
@@ -35,7 +35,7 @@
           font-weight: 600;
         }
 
-        .btn-primary.outline {
+        .btn.primary-outline {
           width: auto;
           padding: .5rem 1.25rem;
           font-size: .9rem;
@@ -70,7 +70,7 @@
       justify-content: center;
       margin-top: 2rem;
 
-      .btn-primary {
+      .btn.primary {
         max-width: 13rem;
       }
     }
