--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.scss
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.scss
@@ -3,7 +3,7 @@
     cursor: pointer;
     background-color: var(--item-background);
     margin-bottom: 1rem;
-    border-radius: 8px;
+    border-radius: .5rem;
     padding: .625rem .5rem;
     box-shadow: var(--shadow);
     -webkit-box-shadow: var(--shadow);
@@ -12,7 +12,7 @@
     .item-image {
         aspect-ratio: 5 / 4;
         width: clamp(5rem, 20%, 7rem);
-        border-radius: 6px;
+        border-radius: .375rem;
         object-fit: cover;
         box-shadow: 0px 1px 1px 0px rgba(var(--primary-dark-rgb),0.15);
         -webkit-box-shadow: 0px 1px 1px 0px rgba(var(--primary-dark-rgb),0.15);
