--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,12 +1,16 @@
-<div class="row">
-    <div class="col-xs-10">
-        <app-shopping-edit></app-shopping-edit>
-        <hr>
-        <ul class="list-group" >
-            <a class="list-group-item" style="cursor: pointer" *ngFor="let ingredient of ingredients; let i = index"
-            (click)="onEditItem(i)" >
-              {{ ingredient.name }} ({{ ingredient.amount }})
-            </a>
-        </ul>
+<app-header title="Shopping List" [centeredTitle]="true">
+    <div class="start">
+        <button class="btn-icon" (click)="back()">
+        <img src="assets/icons/arrow-left.svg" />
+        </button>
     </div>
+</app-header>
+<div class="page-container with-header">
+    <app-shopping-edit></app-shopping-edit>
+    <ul class="ingredients" >
+        <a class="ingredient" *ngFor="let ingredient of ingredients; let i = index" (click)="onEditItem(i)">
+            <p class="name">{{ ingredient.name }}</p>
+            <p class="amount">{{ ingredient.amount }}</p>
+        </a>
+    </ul>
 </div>
