--- a/src/app/recipes/recipe-edit/recipe-edit.component.scss
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.scss
@@ -22,6 +22,7 @@
       margin-bottom: 1rem;
       border-radius: .5rem;
       object-fit: cover;
+      border: 1px solid var(--border);
     }
 
     .ingredients {
