--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,5 @@
 <app-recipe-item *ngFor="let recipeEl of recipes; let i = index" [recipe] = "recipeEl" [index] = "i"></app-recipe-item>
+
+<button class="add-recipe" (click)="onNewRecipe()">
+    <img src="assets/icons/add.svg">
+</button>
