--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -7,6 +7,7 @@
         pattern="^[1-9]+[0-9]*$" >
     </div>
     <div class="actions">
+        <button class="btn primary-outline" type="button" (click)="onDelete()" *ngIf="editMode" >Delete</button>
         <button class="btn primary-outline" type="button" (click)="onClear()" >Clear</button>
         <button class="btn primary" type="submit" [disabled]="!f.valid" >
             {{ editMode ? 'Update' : 'Add' }}
