--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -16,13 +16,17 @@
             <p class="desc">{{recipe.description}}</p>
         </section>
         <section class="item-section ingredients">
-            <h4 class="header">Ingredients</h4>
+            <h4 class="header" *ngIf="recipe.ingredients.length > 0">Ingredients</h4>
             <ul class="ingredients-list">
                 <li class="ingredient" *ngFor="let ingredient of recipe.ingredients">
                     <p class="name">{{ ingredient.name }}</p>
                     <p class="amount">{{ ingredient.amount }}</p>
                 </li>
             </ul>
+            <div class="no-ingredients" *ngIf="recipe.ingredients.length === 0">
+                <h4>No Ingredients Added!</h4>
+                <button class="btn primary fill" (click)="onEditRecipe()">Add Ingredients</button>
+            </div>
         </section>
     </section>
     <div class="actions">
