--- a/src/app/recipes/recipe-detail/recipe-detail.component.scss
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.scss
@@ -62,6 +62,25 @@
                     font-weight: 600;
                 }
 
+                .no-ingredients {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: min(80%, 30rem);
+                    margin: 0 auto;
+                    margin-top: 2rem;
+
+                    h4 {
+                        font-weight: 600;
+                        margin-bottom: .625rem;
+                    }
+
+                    .btn {
+                        width: auto;
+                        padding-inline: 1.25rem;
+                    }
+                }
+
                 .ingredients-list {
                     list-style-type: none;
                     background-color: var(--item-background);
