--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,16 @@
-<a class="item" [routerLink]="[index]" routerLinkActive="active">
+<a class="item" [routerLink]="[index]" routerLinkActive="active" *ngIf="recipe">
     <img class="item-image" [src]="recipe.imagePath" alt="{{ recipe.name }}">
     <div class="item-detail">
         <h5 class="item-heading">{{ recipe.name }}</h5>
         <p class="item-text">{{ recipe.description }}</p>
+    </div>
+</a>
+
+<a class="item" *ngIf="!recipe">
+    <div class="item-image skeleton"></div>
+    <div class="item-detail">
+        <div class="item-heading skeleton"></div>
+        <div class="item-text skeleton"></div>
+        <div class="item-text skeleton"></div>
     </div>
 </a>
