--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.scss
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.scss
@@ -25,6 +25,7 @@
         flex-direction: column;
         justify-content: center;
         max-width: calc(100% - 6rem);
+        width: 100%;
 
         .item-heading {
             white-space: nowrap;
@@ -43,6 +44,41 @@
             -webkit-box-orient: vertical !important;
         }
     }
+
+    .item-detail {
+        .item-heading.skeleton {
+            width: 50%;
+            height: 1.2rem;
+            border-radius: 0.25rem;
+            margin-bottom: 0.25rem;
+        }
+
+        .item-text.skeleton {
+            width: 100%;
+            height: 0.7rem;
+            border-radius: 0.25rem;
+            margin-bottom: 0.2rem;
+
+            &:last-child {
+                width: 60%;
+            }
+        }
+    }
+}
+
+@keyframes loading {
+    0% {
+        background-position: 200% 0;
+    }
+    100% {
+        background-position: -200% 0;
+    }
+}
+
+.skeleton {
+    background: linear-gradient(90deg, #EEEEEE 25%, #DEDEDE 50%, #EEEEEE 75%);
+    background-size: 200% 100%;
+    animation: loading 2s infinite ease-in-out;
 }
 
 :host:last-child {
