--- a/src/app/recipes/recipe-list/recipe-list.component.scss
+++ b/src/app/recipes/recipe-list/recipe-list.component.scss
@@ -6,11 +6,39 @@
     align-items: center;
     justify-content: center;
     background-color: var(--primary);
-    position: absolute;
+    position: fixed;
     bottom: 1.5rem;
     right: 1.5rem;
 
     img {
         width: 2rem;
+    }
+}
+
+.no-recipes {
+    width: 100%;
+    height: calc(100dvh - 6.49rem);
+    height: calc(100vh - 6.49rem);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10dvh;
+
+    img, p, .btn {
+        margin-bottom: 1rem;
+    }
+
+    img {
+        width: min(80%, 20rem);
+    }
+
+    .detail {
+        width: min(90%, 30rem);
+        text-align: center;
+    }
+
+    h4 {
+        margin-bottom: .2rem;
     }
 }
