--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -19,11 +19,11 @@
         max-width: 22.5rem;
 
         .form-input {
-            margin-bottom: 1.25rem;
+            margin-bottom: 1.5rem;
         }
 
         .actions {
-            margin-top: 12px;
+            margin-top: 1.75rem;
 
             .sign-up {
                 margin-block: 1.25rem;
