--- a/src/app/shared/loading-spinner/loading-spinner.component.scss
+++ b/src/app/shared/loading-spinner/loading-spinner.component.scss
@@ -6,7 +6,8 @@
 .container {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
+  z-index: 100;
   display: flex;
   justify-content: center;
   align-items: center;
