Add and get recipes API

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -8,7 +8,7 @@
                 <img src="assets/icons/shopping-cart.svg">
             </button>
         </div>
-        <img [src]="recipe.imagePath" alt="{{ recipe.name }}" class="item-img">
+        <img [src]="recipe.coverImg" alt="{{ recipe.name }}" class="item-img">
     </div>
     <section class="item-details">
         <section class="item-section">
