update and delete recipe API

--- a/src/app/recipes/recipe-edit/recipe-edit.component.scss
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.scss
@@ -47,7 +47,7 @@
         width: 100%;
         display: flex;
         align-items: center;
-        margin-bottom: .75rem;
+        margin-bottom: 1.5rem;
 
         .form-input {
           width: calc(75% - 2rem);
