--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="recipe">
     <div class="item-img-container">
         <div class="btns">
             <button class="btn" (click)="back()">
